[package]
name = "sm-action"
version = "3.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"

# TODO: switch to a stable release after a version newer than 1.0.0 is available
bitwarden-core = { git = "https://github.com/bitwarden/sdk-internal.git", branch = "sm-action-rs", features = ["secrets"] }
bitwarden-sm = { git = "https://github.com/bitwarden/sdk-internal.git", branch = "sm-action-rs" }
bitwarden-vault = { git = "https://github.com/bitwarden/sdk-internal.git", branch = "sm-action-rs" }

tokio = { version = "1.48.0", features = ["macros"] }
uuid = "1.18.1"

[profile.release]
strip = true
